--- a/frontend/layouts/partials/nav.html
+++ b/frontend/layouts/partials/nav.html
@@ -15,7 +15,7 @@
                     <a href="{{ "/teaching" | relURL }}" class="nav__link{{ if eq .Page.RelPermalink "/teaching/" }} nav__link--active{{ end }}" role="menuitem" aria-label="View teaching experience">Teaching</a>
                 </li>
                 <li class="nav__item" role="none">
-                    <a href="{{ "/about" | relURL }}" class="nav__link{{ if eq .Page.RelPermalink "/about/" }} nav__link--active{{ end }}" role="menuitem" aria-label="Learn about me">About</a>
+                    <a href="{{ "/blog" | relURL }}" class="nav__link{{ if eq .Page.RelPermalink "/blog/" }} nav__link--active{{ end }}" role="menuitem" aria-label="Read blog posts">Blog</a>
                 </li>
                 <li class="nav__item" role="none">
                     <a href="{{ "/contact" | relURL }}" class="nav__link{{ if eq .Page.RelPermalink "/contact/" }} nav__link--active{{ end }}" role="menuitem" aria-label="Contact information">Contact</a>
