--- a/frontend/layouts/_default/single.html
+++ b/frontend/layouts/_default/single.html
@@ -2,6 +2,9 @@
     <div class="post-page">
         <div class="post-container">
             <article class="post-article">
+                {{ if .Params.personal_note }}
+                    <div class="personal-note-ribbon">from personal notes that predate this website</div>
+                {{ end }}
                 <header class="post-header">
                     <h1 class="post-title">{{ .Title }}</h1>
                     <div class="post-meta">
