--- a/frontend/layouts/blog/list.html
+++ b/frontend/layouts/blog/list.html
@@ -11,34 +11,47 @@
                 {{ if $pages }}
                     <div class="blog-posts">
                         {{ range $pages.ByDate.Reverse }}
-                            <article class="blog-post-card">
-                                <div class="post-header">
-                                    <h2 class="post-title">
-                                        <a href="{{ .Permalink }}" class="post-link">{{ .Title }}</a>
-                                    </h2>
-                                    <div class="post-meta">
-                                        <time class="post-date" datetime="{{ .Date.Format "2006-01-02" }}">
-                                            {{ .Date.Format "January 2, 2006" }}
-                                        </time>
-                                        {{ if .Params.tags }}
-                                            <div class="post-tags">
-                                                {{ range .Params.tags }}
-                                                    <span class="tag">{{ . }}</span>
-                                                {{ end }}
-                                            </div>
-                                        {{ end }}
+                            <article class="blog-post-card{{ if .Params.genesis }} genesis{{ end }}">
+                                {{ if .Params.personal_note }}
+                                    <div class="personal-note-ribbon">from personal notes that predate this website</div>
+                                {{ end }}
+                                <div class="blog-card-content">
+                                    <div class="post-header">
+                                        <h2 class="post-title">
+                                            <a href="{{ .Permalink }}" class="post-link">{{ .Title }}</a>
+                                        </h2>
+                                        <div class="post-meta">
+                                            <time class="post-date" datetime="{{ .Date.Format "2006-01-02" }}">
+                                                {{ .Date.Format "January 2, 2006" }}
+                                            </time>
+                                            {{ if .Params.tags }}
+                                                <div class="post-tags">
+                                                    {{ range .Params.tags }}
+                                                        <span class="tag">{{ . }}</span>
+                                                    {{ end }}
+                                                </div>
+                                            {{ end }}
+                                        </div>
+                                    </div>
+                                    
+                                    {{ if .Summary }}
+                                        <div class="post-summary">
+                                            {{ .Summary }}
+                                        </div>
+                                    {{ end }}
+                                    
+                                    <div class="post-footer">
+                                        <a href="{{ .Permalink }}" class="read-more">Read More →</a>
                                     </div>
                                 </div>
                                 
-                                {{ if .Summary }}
-                                    <div class="post-summary">
-                                        {{ .Summary }}
+                                {{ if .Params.thumbnail }}
+                                    <img src="{{ .Params.thumbnail }}" alt="{{ .Title }}" class="blog-card-thumbnail" loading="lazy">
+                                {{ else }}
+                                    <div class="blog-card-thumbnail-placeholder">
+                                        <span>📝</span>
                                     </div>
                                 {{ end }}
-                                
-                                <div class="post-footer">
-                                    <a href="{{ .Permalink }}" class="read-more">Read More →</a>
-                                </div>
                             </article>
                         {{ end }}
                     </div>
